fixed search button alignment issue

--- a/app/assets/sass/_forms.scss
+++ b/app/assets/sass/_forms.scss
@@ -97,6 +97,8 @@ textarea.form-control{
     box-shadow:none;
     font-size:19px;
     padding:5px !important;
+    background:white !important;
+    font-family: $font-primary !important;
 
     @media (min-width: 641px) {
         width:50% !important;
@@ -280,5 +282,12 @@ textarea.form-control{
 .js .js-hidden {
     display: none;
     visibility: hidden;
+}
+
+//sharpoint override
+input[type=button], 
+input[type=reset], 
+input[type=submit], button{
+    font-family: $font-primary !important;
 }
 
