--- a/app/assets/sass/_search-results.scss
+++ b/app/assets/sass/_search-results.scss
@@ -10,6 +10,7 @@
 
         .ms-srch-sbLarge{
             background-color:transparent;
+            position:relative;
 
             input{
                 height:43px;
@@ -19,6 +20,7 @@
                 @include border-radius(4px); 
                 width:100%;
                 position:relative;
+                padding:5px;
 
                 &:focus{
                     @extend .input-focus;
@@ -27,11 +29,18 @@
         }
 
         .ms-srch-sb-searchLink{
+            @extend .btn;
+            @extend .btn-primary;
             text-decoration:none;
             text-align:center;
             position:absolute;
-            right:0;
-            top:0;
+            right:-1px;
+            top:-1px;
+            height:45px;
+            width:45px;
+            border:0 !important;
+            margin:0;
+            @include border-radius(0px 4px 4px 0px);
 
             img{
                 display:none;
@@ -41,12 +50,9 @@
                 content: "\f002";
                 font-size:30px;
                 line-height:1;
-            }
-            &:hover{
-                background:transparent;
-            }
-            &:focus{
-                @extend .input-focus;
+                position:absolute;
+                right:8px;
+                top:7px;
             }
         }
     }
